src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments/notes pertinent to contact</description>
        <label>Additional Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_me_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact me Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Insert_Action__c</fullName>
        <label>DupeBlocker Insert Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Update_Action__c</fullName>
        <label>DupeBlocker Update Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__BuySignals__c</fullName>
        <label>Total Buy Signals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentActivityDate__c</fullName>
        <label>Most Recent Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentBuySignalDate__c</fullName>
        <label>Most Recent Buy Signal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalInboundActivity__c</fullName>
        <label>Total Inbound Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate  Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <label>Eloqua Lead Rating</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Composition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Children in the House?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hear_About_Behr__c</fullName>
        <label>Hear About Behr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiTouchContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hi-Touch Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBS_2011_Gift_Name__c</fullName>
        <label>IBS 2011 Gift Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBS_Source__c</fullName>
        <label>IBS Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquire_about__c</fullName>
        <label>Inquire about?</label>
        <picklist>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store locator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_In__c</fullName>
        <label>Interested In</label>
        <picklist>
            <picklistValues>
                <fullName>Exterior Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux Finishes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stains</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source-Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr In-Store Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPRO Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPro Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash &amp; Carry Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call - Job Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call- THD In Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP Drivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVO Mkt Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMF Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Services InstallCompanies Mobile Marketing Tour 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiview PDCA Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Carryout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Carryout THD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD National Account Trade Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD PASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD PPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pro Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Magazine Publication</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Like_to_Receive_Behr_News_Offers__c</fullName>
        <label>Like to Receive Behr News &amp; Offers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Employee__c</fullName>
        <label>No of Employee</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source_Description__c</fullName>
        <label>Other Lead Source Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position/Title</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect, Designer, Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner, Principal or Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President &amp; CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP/General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postition__c</fullName>
        <label>Postition</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Occupation__c</fullName>
        <label>Primary Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture, Planner, Designer, Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials/Lumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Products/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Coverings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Building Manufacture (Panelized &amp; Log)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance and Title Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Exporter - Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing of Modular/Panelized/Log Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masonry/Stone Work/Tile/Plaster Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Development - Affordable Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Development - Condo/Coop Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Development - Market Rate Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily General Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Wholesale Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint/Wall Coverings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planner/Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing/HVAC/Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manufacture and/or Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate/Investing/Appraisals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Interior Paint and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Specialty Paints and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux &amp; Decorative Finishes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete &amp; Masonry Waterproofers and Sealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Specialty Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Paint and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Specialty Paint and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Stains &amp; Waterproofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Specialty Coatings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Store__c</fullName>
        <label>Primary Store</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Behr__c</fullName>
        <label>Purchased Behr?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Register_at_Show_Village__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register at Show Village</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_At_Booth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered At Booth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registerred_at_Lounge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registerred at Lounge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Store_No__c</fullName>
        <label>SAP Store No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_email__c</fullName>
        <label>Secondary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_phone__c</fullName>
        <label>Secondary phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Services_Requested__c</fullName>
        <label>Services Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Color Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery/Factory Tinting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Store Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Site Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms/Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services(s) Not Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_of_store__c</fullName>
        <label>Size of store</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Network_Account_Name__c</fullName>
        <label>Social Network Account Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Network_Account__c</fullName>
        <label>Social Network Account Name</label>
        <picklist>
            <picklistValues>
                <fullName>QQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weibo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RenRen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangdong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guizhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hainan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jilin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nei Mongol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qinghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sichuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tibet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xinjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yunnan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <label>Store Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <label>Sub-Lead Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Contractor Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pro Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rep Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Magazine Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web to Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPro Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Trade Association/Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Walk In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_be_attending_IBS_2011__c</fullName>
        <label>Will be attending IBS 2011</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Contact_Email_Addresses</fullName>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <label>Contact Email Addresses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <namedFilters>
        <fullName>Case_00NV0000000Wqz7MAC</fullName>
        <active>true</active>
        <field>Case.Related_Store__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Store / Sub</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Related Store</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I7000000084lcEAA_00N70000003DYOfEAO</fullName>
        <active>true</active>
        <field>Direct_Onboarding__c.Primary_Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_01I7000000084lcEAA_00N70000003DYOfEAO</name>
        <sourceObject>Direct_Onboarding__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_Opportunity_00N70000002Ud99EAC</fullName>
        <active>true</active>
        <field>Opportunity.Primary_Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_Opportunity_00N70000002Ud99EAC</name>
        <sourceObject>Opportunity</sourceObject>
    </namedFilters>
    <recordTypes>
        <fullName>China_Contact</fullName>
        <active>true</active>
        <label>China Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <description>Dealer store</description>
        <label>Dealer Store / Sub</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_Contact</fullName>
        <active>true</active>
        <label>US Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>BEHR_Acct_FirstNameOrPhoneOrEmailReqd_US</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $RecordType.DeveloperName == &apos;US_Contact&apos;,  
OR( 
ISBLANK( FirstName ) ,
AND( ISBLANK( Email ), ISBLANK( Phone ) )
))</errorConditionFormula>
        <errorMessage>Please enter either First Name and phone or email</errorMessage>
    </validationRules>
</CustomObject>